# Alcove_HavenLiteVersion

./: .gitignore  README.md  index.html  pyproject.toml  style.css
alcove/: config.py  console.py  main.py  moves.py  openai_realtime.py  prompts.py  runtime.env.example  utils.py
alcove/audio/: head_wobbler.py
alcove/personas/: __init__.py  alcove_handler.py  memory.py  persona_manager.py
alcove/profiles/example/: sweep_look.py
alcove/profiles/persona_a/: instructions.txt  tools.txt
alcove/profiles/persona_b/: instructions.txt  tools.txt
alcove/tools/: camera.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  stop_dance.py  stop_emotion.py  switch_persona.py  web_search.py
alcove/vision/: processors.py
